add categories and use downloadable option for fontawesome

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,22 +56,20 @@ body {
     border: 1px solid black !important;
 }
 
-#delivery-banner .col {
-    background-color: black !important;
-    color: white;
-    z-index: 1031;
-    position: relative;
+.bg-black {
+    background: #000 !important;
 }
 
 .overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: white;
-    z-index: -1;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
 }
+
 
 /* -------------------------------- Media Queries */
 
