Added sorting and product counts to product page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,8 +69,30 @@ body {
 	background: white;
 	z-index: -1;
 }
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
+.badge-white {
+    background-color: #fff !important;
+    border: 1px solid black !important;
+    color: #000 !important;
+}
 
+.badge-white:hover {
+    background-color: #000 !important;
+    color: #fff !important;
+}
 
+.category-badge {
+    display: inline-block;
+    margin: 0.25rem;
+}
+
+.badge {
+    padding: 0.5rem;
+    margin: 0.25rem;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
