--- a/static/css/base.css
+++ b/static/css/base.css
@@ -73,6 +73,19 @@ a.category-badge > span.badge:hover {
     background: #212529 !important;
     color: #fff !important;
 }
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
+
 .badge-white {
     background-color: #fff !important;
     border: 1px solid black !important;
