--- a/static/css/base.css
+++ b/static/css/base.css
@@ -59,7 +59,11 @@ body {
 .bg-black {
     background: #000 !important;
 }
-
+.btn-outline-black {
+    background: white;
+    color: black !important;
+    border: 1px solid black !important;
+}
 .overlay {
 	height: 100%;
 	width: 100%;
