--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,12 @@
             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
               <div class="text-center">
                 <i class="fas fa-shopping-bag fa-lg"></i>
-                <p class="my-0">${{ grand_total|default:"0.00"|floatformat:2 }}</p>
+                <p class="my-0">
+                  ${{ grand_total|default:"0.00"|floatformat:2 }}
+                {% else %}
+                 $0.00
+                {% endif %}
+              </p>
               </div>
             </a>
           </li>
@@ -100,7 +105,7 @@
     </div>
     <div id="delivery-banner" class="row text-center">
       <div class="col bg-black text-white">
-        <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
+        <h4 class="logo-font my-1">Free delivery on orders over ${{ free_deliverys_threshold }}!</h4>
       </div>
     </div>
   </header>
