--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -23,6 +23,10 @@
         <div class="row">
             <div class="col">
                 {% if bag_items %}
+                    <!--{{bag_items}} renders json so you can see the data structure-->
+                    <br>
+                    <br>
+                    <!--{{request.session.bag}}-->
                     <div class="table-responsive rounded">
                         <table class="table table-sm table-borderless">
                             <thead class="text-black">
