--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,35 +1,53 @@
+{# Extend the base template (common layout) #}
 {% extends "base.html" %}
+{# Load static files template tag library #}
 {% load static %}
 
+{# Define page_header block (currently just a container with an empty column) #}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
-            <div class="col"></div>
+            <div class="col"></div> {# Empty column for spacing or future use #}
         </div>
     </div>
 {% endblock %}
 
+{# Start content block #}
 {% block content %}
+    {# Semi-transparent overlay background #}
     <div class="overlay"></div>
+    
+    {# Fluid container to allow full-width layout #}
     <div class="container-fluid">
         <div class="row">
+            
+            {# First column: Product Image Section #}
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if product.image %}
+                        {# If the product has an image, display it linked to the full-size version #}
                         <a href="{{ product.image.url }}" target="_blank">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
-                        {% else %}
+                    {% else %}
+                        {# If no image, show a default 'no image available' picture #}
                         <a href="">
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                         </a>
                     {% endif %}
                 </div>
             </div>
+
+            {# Second column: Product Details and Add-to-Bag Form #}
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
+                    {# Product Name #}
                     <p class="mb-0">{{ product.name }}</p>
+
+                    {# Product Price #}
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+
+                    {# Link to product's category page if category exists #}
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
                         <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -37,17 +55,26 @@
                         </a>
                     </p>
                     {% endif %}
+
+                    {# Display product rating if available, else show "No Rating" #}
                     {% if product.rating %}
                         <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+
+                    {# Product description #}
                     <p class="mt-3">{{ product.description }}</p>
+
+                    {# Form to add product to shopping bag #}
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
+
+                            {# Check if product has sizes #}
                             {% with product.has_sizes as s %}
                             {% if s %}
+                                {# If it has sizes, render a size selection dropdown #}
                                 <div class="col-12">
                                     <p><strong>Size:</strong></p>
                                     <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
@@ -59,6 +86,8 @@
                                     </select>
                                 </div>
                             {% endif %}
+
+                            {# Quantity input field #}
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
@@ -67,21 +96,30 @@
                                     </div>
                                 </div>
                             </div>
+
+                            {# Buttons for navigating back to products or adding to bag #}
                             <div class="col{% if s %}-12 mt-2{% endif %}">
+                                {# Button to continue shopping #}
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
+
+                                {# Submit button to add product to shopping bag #}
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
+
+                            {# Hidden input to store the redirect URL after adding to bag #}
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
                         </div>
                     </form>
+
                 </div>
             </div>
+
         </div>
     </div>
 {% endblock %}
