--- a/static/css/base.css
+++ b/static/css/base.css
@@ -100,8 +100,20 @@ a.category-badge > span.badge:hover {
 .remove-item {
     cursor: pointer;
 }
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15;
+    z-index: 99999999999;
+}
 
+.custom-toast {
+    overflow: visible;
+}
 
+.toast-capper {
+    height: 2px;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
