--- a/templates/base.html
+++ b/templates/base.html
@@ -4,23 +4,25 @@
 <html lang="en">
 
 <head>
+
   {% block meta %}
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   {% endblock %}
 
-  {% block extra_meta %}{% endblock %}
+  {% block extra_meta %}
+  {% endblock %}
 
   {% block corecss %}
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
-  <link rel="stylesheet" href="{% static 'fontawesome/css/all.min.css' %}">
   {% endblock %}
 
-  {% block extra_css %}{% endblock %}
+  {% block extra_css %}
+  {% endblock %}
 
   {% block corejs %}
   <!-- Add your kit code -->
@@ -35,8 +37,8 @@
     crossorigin="anonymous"></script>
   {% endblock %}
 
-
-  {% block extra_js %}{% endblock %}
+  {% block extra_js %}
+  {% endblock %}
 
   <title>Boutique Ado {% block extra_title %}{% endblock %}</title>
 </head>
@@ -123,7 +125,22 @@
   </header>
 
   {% if messages %}
-  <div class="message-container"></div>
+  <div class="message-container">
+    
+      {% for message in messages %}
+          {% with message.level as level %}
+              {% if level == 40 %}
+                  {% include 'includes/toasts/toast_error.html' %}
+              {% elif level == 30 %}
+                  {% include 'includes/toasts/toast_warning.html' %}
+              {% elif level == 25 %}
+                  {% include 'includes/toasts/toast_success.html' %}
+              {% else %}
+                  {% include 'includes/toasts/toast_info.html' %}
+              {% endif %}
+          {% endwith %}
+      {% endfor %}
+  </div>
   {% endif %}
 
   {% block page_header %}
@@ -133,6 +150,11 @@
   {% endblock %}
 
   {% block postloadjs %}
+
+  <script type="text/javascript">
+    $('.toast').toast('show');
+  </script>
+
   {% endblock %}
 
 </body>
