--- a/templates/allauth/socialaccount/login.html
+++ b/templates/allauth/socialaccount/login.html
@@ -1,8 +1,6 @@
 {% extends "socialaccount/base.html" %}
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
-
 {% block content %}
 {% if process == "connect" %}
 <h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
@@ -18,4 +16,4 @@
   {% csrf_token %}
   <button type="submit">{% trans "Continue" %}</button>
 </form>
-{% endblock content %}
+{% endblock %}
