further updates for the order history functionality

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -37,8 +37,8 @@
                     <div class="card-body">
                         <p class="text-muted font-weight-bold">Order History</p>
                         <div class="order-history table-responsive">
-                            <table class="table table-sm table-hover">
-                                <thead class="thead-light">
+                            <table class="table table-sm table-borderless">
+                             
                                     <tr>
                                         <th>Order Number</th>
                                         <th>Date</th>
