--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,3 +1,7 @@
+.orderhistory {
+    max-height: 416px; /* height of profile form and submit button */
+    overflow-y: auto;
+}
 #profile-update-form .form-control {
     color: #000;
 }
@@ -5,9 +9,14 @@
 #profile-update-form input::placeholder {
     color: #aab7c4;
 }
+#id_default_country,
+#id_default_country option:not(:first-child) {
+    color: #000;
+}
 
-
-
+#id_default_country option:first-child {
+    color: #aab7c4;
+}
 /* #profile-update-form{
     background-color: red;
 } */
